for consistent map ordering, using Guava's ImmutableMap.