@@ -3,6 +3,7 @@ package pp.muza.monopoly.model.pieces.actions;
 import java.util.List;
 import java.util.Map;
 
+import com.google.common.collect.ImmutableMap;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -56,7 +57,7 @@ public abstract class BasePayment extends BaseDebt {
     protected Map<String, Object> params() {
         return mergeMaps(
                 super.params(),
-                Map.of("recipient", recipient)
+                ImmutableMap.of("recipient", recipient)
         );
     }
 }
