@@ -1,8 +1,10 @@
 package pp.muza.monopoly.model.pieces.actions;
 
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
+import com.google.common.collect.ImmutableMap;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -68,7 +70,7 @@ public class Contract extends BaseActionCard {
     protected Map<String, Object> params() {
         return mergeMaps(
                 super.params(),
-                Map.of("position", position, "price", price)
+                ImmutableMap.of("position", position, "price", price)
         );
     }
 }
